VQ-640 | Internationalization Implementation for V6 Application.

--- a/src/app/features/administration/components/staff-performance/view-employee-transactions/view-employee-transactions.component.html
+++ b/src/app/features/administration/components/staff-performance/view-employee-transactions/view-employee-transactions.component.html
@@ -5,7 +5,7 @@
     <button type="button" class="btn float-end" id="btn-help">
       <i class="fa fa-question-circle" style="color:#00529B;"></i>
     </button>
-    <label class="btn float-end" style="color: #00529B;">Help</label>
+    <label class="btn float-end" style="color: var(--primary-color);">Help</label>
 
   </div>
   <form [formGroup]="sortingForm" style="background: none; display: contents">
