--- a/src/app/features/administration/components/tickets/ticket-details/tax-details/tax-details.component.css
+++ b/src/app/features/administration/components/tickets/ticket-details/tax-details/tax-details.component.css
@@ -1,9 +1,9 @@
 table thead tr td {
-  color: #00529b;
+  color: var(--primary-color);
   font-weight: bold;
 }
 table tbody tr th {
-  background: #00529b;
+  background: var(--primary-color);
   color: #ffffff;
 }
 
