--- a/src/app/features/base/components/dashboard/calendar/calendar.component.html
+++ b/src/app/features/base/components/dashboard/calendar/calendar.component.html
@@ -77,7 +77,7 @@
                   <span class="inactive mr-2" style="font-size: 0.9em">
                     {{ event?.startDate | date: 'EE '}}
                   </span>
-                      <span style="color: #00529B; font-weight: bold; font-size: 1.2em">
+                      <span style="color: var(--primary-color); font-weight: bold; font-size: 1.2em">
                     {{ event?.startDate | date: 'dd'}}
                   </span>
                     </div>
@@ -117,7 +117,7 @@
                 <span
                   style="padding: 10px;
                    border-radius: 100%;
-                   background: #00529B;
+                   background: var(--primary-color);
                    color: #fff;
                    margin-right: 10px"
                 >
