--- a/src/app/features/base/components/dashboard/tickets-summary/tickets-summary.component.html
+++ b/src/app/features/base/components/dashboard/tickets-summary/tickets-summary.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <div class="row">
       <div class="col-sm-9">
-        <h5 class="card-title">Tickets</h5>
+        <h5 class="card-title">{{'lang.tickets' | translate}}</h5>
       </div>
       <div class="col-sm-2">
         <span class="text-danger fw-bold">{{ticketCountTotal}}</span>
@@ -11,8 +11,8 @@
     <table class="table table-borderless">
       <thead>
       <tr>
-        <th>Tickets</th>
-        <th class="align-center">No. of Tickets</th>
+        <th>{{'lang.tickets' | translate}}</th>
+        <th class="align-center">{{'lang.no_of_tickets' | translate}}</th>
       </tr>
       </thead>
       <tbody>
