--- a/src/app/features/reports/report-dashboard/report-dashboard.component.css
+++ b/src/app/features/reports/report-dashboard/report-dashboard.component.css
@@ -2,5 +2,5 @@
 ::ng-deep .p-datatable .p-datatable-thead > tr > th {
   padding: 0.5em;
   font-size: 0.9em;
-  color: #00529b;
+  color: var(--primary-color);
 }
