--- a/src/app/features/administration/components/profile/administration.component.css
+++ b/src/app/features/administration/components/profile/administration.component.css
@@ -9,7 +9,7 @@
     font-size: 20px;
     line-height: 30px;
     display: inline-block;
-    
+
     color: #323A46;
 }
 
@@ -53,11 +53,11 @@
      margin-left: auto;
      margin-right: auto;
      width: 100%;
-     background: #00529B;
+     background: var(--primary-color);
      border-radius: 0px;
      color: #ffffff;
      text-transform: uppercase;
-     border: 1px solid #00529b;
+     border: 1px solid var(--primary-color);
 }
 
 .top {
