--- a/src/app/features/administration/components/staff-performance/view-employee/view-employee.component.html
+++ b/src/app/features/administration/components/staff-performance/view-employee/view-employee.component.html
@@ -8,7 +8,7 @@
     <button type="button" class="btn float-end" id="btn-help">
       <i class="fa fa-question-circle" style="color:#00529B;"></i>
     </button>
-    <label class="btn float-end" style="color: #00529B;">Help</label>
+    <label class="btn float-end" style="color: var(--primary-color);">Help</label>
 
   </div>
   <div class="row col-lg-6 pb-2">
