--- a/src/app/features/auth/home/home.component.css
+++ b/src/app/features/auth/home/home.component.css
@@ -95,7 +95,7 @@
 .navbar .dropdown-toggle::after {
   border: none;
   content: "\f107";
-  font-family: "Font Awesome 5 Free";
+  font-family: "Roboto !important";
   font-weight: 900;
   vertical-align: middle;
   margin-left: 8px;
