--- a/src/app/features/base/components/dashboard/calendar/calendar.component.css
+++ b/src/app/features/base/components/dashboard/calendar/calendar.component.css
@@ -1,6 +1,6 @@
 .create-event-button {
   background: #fff;
-  color: #00529B;
+  color: var(--primary-color);
   padding: 5px 10px;
   float: right;
   font-weight: bold
@@ -30,7 +30,7 @@
 
 ::ng-deep .calendar-input .p-button {
   background: #fff !important;
-  color: #00529b !important;
+  color: var(--primary-color) !important;
   border: none;
 }
 
@@ -60,17 +60,17 @@
 }
 .text-end-view {
   border-radius: 2px;
-  border: 1px solid #00529B;
+  border: 1px solid var(--primary-color);
   background-color: #ffffff;
-  color: #00529B;
+  color: var(--primary-color);
   padding: 0.6rem 1.3rem;
   font-size: 12px;
 }
 
 
 .text-end-view:hover {
-  border: 1px solid #00529B;
-  background-color: #00529B;
+  border: 1px solid var(--primary-color);
+  background-color: var(--primary-color);
   color: white;
   padding: 0.6rem 1.3rem;
   font-size: 12px;
