--- a/src/app/features/base/components/dashboard/dashboard.component.html
+++ b/src/app/features/base/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="base-content-section home">
-  <h5 class="section-title">Home</h5>
+  <h5 class="section-title">{{'lang.home' | translate}}</h5>
   <div class="row">
       <div class="col-sm-4">
         <app-tickets-summary></app-tickets-summary>
@@ -13,7 +13,7 @@
 </div>
 
 <div class="base-content-section dashboard">
-  <h5 class="section-title">My Dashboard</h5>
+  <h5 class="section-title">{{'lang.my_dashbaord' | translate}}</h5>
   <div class="row">
       <div class="col-sm-6">
         <div class="card">
