--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -1,22 +1,74 @@
 <div class="content-nav">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary fadeIn" style="border-bottom: 1px solid #00539b14;">
-      <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navbar">
-                  <li class="nav-item">
-                      <a (click)="dynamicSideBarMenu(defaultSidebar)" class="nav-link" href="#" routerLink="/home/dashboard" style="font-size: 12px;"><i class="fa-solid fa-house-chimney" style="padding-right: 6px;"></i>{{'Dashboard' | uppercase}}</a>
-                  </li>
-                  <li class="nav-item dropdown" >
-                      <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 12px;">
-                        <i class="fa-solid fa-file-invoice-dollar" style="padding-right: 6px; font-size: 16px;"></i>{{'Accounts' | uppercase}}
-                      </a>
-                      <ul class="dropdown-menu">
-                        <ng-container *ngFor="let account of accountSubMenuList">
-                          <li><a class="dropdown-item"  (click)="dynamicSideBarMenu(account,true)">{{account['name']}}</a></li>
-                        </ng-container>
-                      </ul>
-                  </li>
-                  <!-- <li class="nav-item dropdown">
+  <nav
+    class="navbar navbar-expand-lg bg-body-tertiary fadeIn"
+    style="border-bottom: 1px solid #00539b14"
+  >
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navbar">
+          <li class="nav-item">
+            <a
+              (click)="dynamicSideBarMenu(defaultSidebar)"
+              class="nav-link"
+              href="#"
+              routerLink="/home/dashboard"
+              style="font-size: 12px"
+              ><i
+                class="fa-solid fa-house-chimney"
+                style="padding-right: 6px"
+              ></i
+              >{{ "Dashboard" | uppercase }}</a
+            >
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+              style="font-size: 12px"
+            >
+              <i
+                class="fa-solid fa-file-invoice-dollar"
+                style="padding-right: 6px; font-size: 16px"
+              ></i
+              >{{ "Accounts" | uppercase }}
+            </a>
+            <ul class="dropdown-menu" style="width: 300px; padding: 1em 2em 1em 0.5em; border-radius: 0.2em; border-right: 2px solid #00539b67;">
+              <div class="d-flex justify-content-between">
+                <label for="top-left" class="label-text" (click)="dynamicSideBarMenu(accountSubMenuList[0])"> Accounts</label>
+
+                <label for="top-right" class="label-text" (click)="navLink('/home/entity/new')">New Entity <i class="fa-solid fa-plus"></i></label>
+            </div>
+            <div class="my-2"></div>
+            <div class="row">
+                <div class="col-3 d-flex justify-content-end align-items-center">
+                    <label for="input1" class="form-label label-text">Name: </label>
+                </div>
+                <div class="col-9" style="padding: 0.5rem 0;">
+                    <input [(ngModel)]="nameSearchTerm" (keyup.enter)="onSearch()" style="border-radius: 0.3rem; font-size: 10px;" type="text" class="form-control" id="input1" placeholder="Search Name">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-3 d-flex justify-content-end align-items-center" >
+                    <label for="input2" class="form-label label-text" >ID: </label>
+                </div>
+                <div class="col-9" style="padding: 0.5rem 0; ">
+                    <input [(ngModel)]="idSearchTerm" (keyup.enter)="onSearch()" style="border-radius: 0.3rem; font-size: 10px;" type="text" class="form-control" id="input2" placeholder="Search ID">
+                </div>
+            </div>
+            <div class="my-4"></div>
+
+            <div class="d-flex justify-content-end ">
+                <label (click)="navLink('/home/entity/list')" class="text-plain" for="bottom-right">View Entities</label>
+            </div>
+
+            <!-- Add space at the bottom -->
+            <div class="mb-3"></div>
+            </ul>
+          </li>
+          <!-- <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Quotations
                       </a>
@@ -36,17 +88,33 @@
                         </ng-container>
                       </ul>
                   </li> -->
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 12px;">
-                        <i class="fa-solid fa-handshake-angle" style="padding-right: 6px; font-size: 16px;"></i>{{'Reinsurance' | uppercase}}
-                      </a>
-                      <ul class="dropdown-menu">
-                        <ng-container *ngFor="let claim of reinsuranceubMenuList">
-                          <li><a class="dropdown-item"  (click)="dynamicSideBarMenu(claim)">{{claim['name']}}</a></li>
-                        </ng-container>
-                      </ul>
-                  </li>
-                  <!-- <li class="nav-item dropdown">
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+              style="font-size: 12px"
+            >
+              <i
+                class="fa-solid fa-handshake-angle"
+                style="padding-right: 6px; font-size: 16px"
+              ></i
+              >{{ "Reinsurance" | uppercase }}
+            </a>
+            <ul class="dropdown-menu">
+              <ng-container *ngFor="let claim of reinsuranceubMenuList">
+                <li>
+                  <a
+                    class="dropdown-item"
+                    (click)="dynamicSideBarMenu(claim)"
+                    >{{ claim["name"] }}</a
+                  >
+                </li>
+              </ng-container>
+            </ul>
+          </li>
+          <!-- <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Claims
                       </a>
@@ -56,38 +124,81 @@
                         </ng-container>
                       </ul>
                   </li> -->
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 12px;">
-                        <i class="fa-solid fa-people-group" style="padding-right: 6px; font-size: 16px;"></i>{{'Team' | uppercase}}
-                      </a>
-                      <ul class="dropdown-menu">
-                        <ng-container *ngFor="let team of teamSubMenuList">
-                          <li><a class="dropdown-item"  (click)="dynamicSideBarMenu(team)">{{team['name']}}</a></li>
-                        </ng-container>
-                      </ul>
-                  </li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 12px;">
-                        <i class="fa-solid fa-toolbox" style="padding-right: 6px; font-size: 16px;"></i>{{'Administration' | uppercase}}
-                      </a>
-                      <ul class="dropdown-menu">
-                          <ng-container *ngFor="let admin of administationSubMenuList">
-                          <li *ngIf="admin?.isActive"><a class="dropdown-item"  (click)="dynamicSideBarMenu(admin)">{{admin['name']}}</a></li>
-                        </ng-container>
-                      </ul>
-                  </li>
-              </ul>
-              <div class="d-flex" id="chart">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                          <a class="nav-link" routerLink="./reports"><i class="fa-solid fa-chart-simple" style="padding-right: 6px; font-size: 20px;"></i>{{'New Chart' | uppercase}}</a>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link" routerLink="./reports"><i class="fa-solid fa-chart-pie" style="padding-right: 6px; font-size: 20px;"></i>{{'Analytics' | uppercase}}</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+              style="font-size: 12px"
+            >
+              <i
+                class="fa-solid fa-people-group"
+                style="padding-right: 6px; font-size: 16px"
+              ></i
+              >{{ "Team" | uppercase }}
+            </a>
+            <ul class="dropdown-menu">
+              <ng-container *ngFor="let team of teamSubMenuList">
+                <li>
+                  <a class="dropdown-item" (click)="dynamicSideBarMenu(team)">{{
+                    team["name"]
+                  }}</a>
+                </li>
+              </ng-container>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+              style="font-size: 12px"
+            >
+              <i
+                class="fa-solid fa-toolbox"
+                style="padding-right: 6px; font-size: 16px"
+              ></i
+              >{{ "Administration" | uppercase }}
+            </a>
+            <ul class="dropdown-menu">
+              <ng-container *ngFor="let admin of administationSubMenuList">
+                <li *ngIf="admin?.isActive">
+                  <a
+                    class="dropdown-item"
+                    (click)="dynamicSideBarMenu(admin)"
+                    >{{ admin["name"] }}</a
+                  >
+                </li>
+              </ng-container>
+            </ul>
+          </li>
+        </ul>
+        <div class="d-flex" id="chart">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="./reports"
+                ><i
+                  class="fa-solid fa-chart-simple"
+                  style="padding-right: 6px; font-size: 20px"
+                ></i
+                >{{ "New Chart" | uppercase }}</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="./reports"
+                ><i
+                  class="fa-solid fa-chart-pie"
+                  style="padding-right: 6px; font-size: 20px"
+                ></i
+                >{{ "Analytics" | uppercase }}</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
+    </div>
   </nav>
 </div>
