--- a/src/app/features/base/components/header/header.component.css
+++ b/src/app/features/base/components/header/header.component.css
@@ -1,5 +1,5 @@
 .base-navbar {
-  background: #00529B !important;
+  background: var(--primary-color) !important;
   padding-right: 20px;
   padding-left: 20px;
 }
@@ -26,27 +26,62 @@
   font-size: 0.9em;
 }
 
+/* Dropdown Button */
+.dropbtn {
+  background-color: #04aa6d;
+  color: white;
+  padding: 16px;
+  font-size: 10px;
+  border: none;
+}
 
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
 
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 100px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  transform: translateX(-0.5rem);
+  border-radius: 0.2em;
+}
 
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 7px 9px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content > a > span {
+  border-radius: 3rem;
+}
 
+.dropdown-content > a > span:hover {
+  border: 1px solid white;
+}
 
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  border-radius: 0.2em;
+  font-weight: 700;
+}
 
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+  border-radius: 0.2em;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* Change the background color of the dropdown button when the dropdown content is shown */
+/* .dropdown:hover .dropbtn {background-color: #3e8e41;} */
 
 .fadeInDown {
   -webkit-animation-name: fadeInDown;
@@ -81,6 +116,3 @@
     transform: translate3d(0, 0, 0);
   }
 }
-
-
-
