--- a/src/app/features/entities/components/edit/edit.component.html
+++ b/src/app/features/entities/components/edit/edit.component.html
@@ -8,18 +8,18 @@
 </app-dynamic-form> -->
 
 <div class="mx-4 my-4">
-  <h6>{{ partyAccountDetails?.partyType?.partyTypeName }} Details</h6>
+  <h6 style="font-size: 13px;">{{ partyAccountDetails?.partyType?.partyTypeName }} {{'Details' | uppercase}}</h6>
   <ul class="nav nav-tabs" id="ex1" role="tablist">
     <li class="nav-item" role="presentation">
       <a class="nav-link active" id="ex1-tab-1" data-bs-toggle="tab" href="#ex1-tabs-1" role="tab"
-        aria-controls="ex1-tabs-1" aria-selected="false">
-        Personal Information
+        aria-controls="ex1-tabs-1" aria-selected="false" style="font-size: 11px;">
+        {{'Personal Information' | uppercase | translate }}
       </a>
     </li>
     <li class="nav-item" role="presentation">
-      <a class="nav-link" id="ex1-tab-2" data-bs-toggle="tab" href="#ex1-tabs-2" role="tab" aria-controls="ex1-tabs-2"
+      <a style="font-size: 11px;" class="nav-link" id="ex1-tab-2" data-bs-toggle="tab" href="#ex1-tabs-2" role="tab" aria-controls="ex1-tabs-2"
         aria-selected="true">
-        Additional Information
+        {{'Additional Information' | uppercase}}
       </a>
     </li>
   </ul>
