--- a/src/app/features/entities/components/entity/view-entity/view-entity.component.html
+++ b/src/app/features/entities/components/entity/view-entity/view-entity.component.html
@@ -1,4 +1,6 @@
-<div class="mx-4 my-4">
+<div class="mx-4 my-4" style="position: relative;">
+  <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
+
     <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
         <li class="nav-item" role="presentation">
             <a class="nav-link active" id="ex1-tab-1" data-bs-toggle="tab" href="#ex1-tabs-1" role="tab"
