--- a/src/app/features/gis/components/claim/components/list-claims/list-claims.component.css
+++ b/src/app/features/gis/components/claim/components/list-claims/list-claims.component.css
@@ -2,20 +2,20 @@
 .roboto-font{
     font-family: 'Roboto', serif;
   }
-  
+
   .common-icon-color{
     color: #9EA0A5;
   }
-  
+
   i{
     padding-right: 5px;
   }
-  
+
   /** Upper links and texts **/
   .top-elements{
     white-space: nowrap;
     padding-bottom: 10px;
-  
+
     .top-header-text{
       font-family: 'Roboto', serif;
       font-style: normal;
@@ -30,30 +30,30 @@
       width: 180px;
       height: 20px;
       top: 148px;
-  
+
       font-family: 'Roboto', serif;
       font-style: normal;
       font-size: 13px;
       font-weight: 400;
       line-height: 20px;
       opacity: 0.5;
-  
+
       a {
         color: #3F4254;;
         padding-right: 10px;
         text-decoration: none;
       }
-  
+
       a:active{
         opacity: 1 !important;
       }
     }
   }
-  
+
   .top-link-arrow{
     color: #323A46;
   }
-  
+
   /** Upper buttons**/
   .top-staff-btns{
     margin-bottom: 23px;
@@ -65,7 +65,7 @@
   #btn-new-claim{
     box-sizing: border-box;
     background:#00529B;
-    border: 1px solid #00529B;
+    border: 1px solid var(--primary-color);
     box-shadow: 0 4px 4px rgba(61, 164, 255, 0.23);
     border-radius: 2px;
     font-size: 14px;
@@ -73,24 +73,24 @@
   #btn-import-claim{
     box-sizing: border-box;
     border-radius: 2px;
-    color: #00529B;
-    border: 1px solid #00529B;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
     font-size: 14px;
   }
-  
+
   #btn-import-claim:hover{
     background:#00529B;
     color: #ffffff;
   }
-  
+
   #btn-next{
     box-sizing: border-box;
     background:#00529B;
-    border: 1px solid #00529B;
+    border: 1px solid var(--primary-color);
     box-shadow: 0 4px 4px rgba(61, 164, 255, 0.23);
     border-radius: 2px;
   }
-  
+
   #btn_view_claim, #btn_edit_claim {
     color: #01529A;
     background-color: transparent;
@@ -108,17 +108,17 @@
     height: 100%;
     left: 534px;
     top: 203px;
-  
+
     font-family: 'Roboto', serif;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
-  
+
     text-align: center;
     letter-spacing: 1.25px;
     text-transform: uppercase;
-  
+
     filter: drop-shadow(0px 4px 4px rgba(124, 142, 157, 0.23));
     color: #3A3B3F;
   }
@@ -127,7 +127,7 @@
     color: #9EA0A5;
     vertical-align:middle;
   }
-  
+
   form {
     background: #FFFFFF;
     display: flex;
@@ -141,8 +141,8 @@
   /* //.p-component * {
   //  font
   //} */
-  
-  
+
+
   input[type="search"] {
     border: none;
     background: transparent;
@@ -152,7 +152,7 @@
     color: inherit;
     /* //border: 1px solid transparent; */
   }
-  
+
   input[type="search"]::placeholder {
     color: #9EA0A5;
     position: absolute;
@@ -162,7 +162,7 @@
     font-size: 14px;
     letter-spacing: -0.05px;
   }
-  
+
   button[type="submit"] {
     text-indent: -999px;
     overflow: hidden;
@@ -175,30 +175,30 @@
     cursor: pointer;
     opacity: 0.5;
   }
-  
+
   button[type="submit"]:hover {
     opacity: 1;
   }
-  
+
   button[type="submit"]:focus,
   input[type="search"]:focus {
     outline: none;
   }
-  
+
   /*** Navigation Tabs, Table **/
   thead{
     background: #FFFFFF;
     color: #3A3B3F;
-  
+
     font-family: 'Roboto', serif;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
     line-height: 20px;
-  
+
     letter-spacing: -0.05px;
   }
-  
+
   .head {
     padding: 0.5rem;
     font-weight: 500 !important;
@@ -213,13 +213,13 @@
   }
   .btn-primary {
     color: #fff;
-    background-color: #00529b;
-    border-color: #00529b;
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
   }
   .btn-secondary {
     color: #3A3B3F;
     background-color: #FAFAFA;
-    /* //border-color: #00529b; */
+    /* //border-color: var(--primary-color); */
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.12), 0px 1px 3px rgba(0, 0, 0, 0.2);
     text-transform: uppercase;
     font-family: Roboto;
@@ -232,23 +232,22 @@
     /* //margin-left: auto;
     //margin-right: auto;
     //width: 100%; */
-    background: #00529B;
+    background: var(--primary-color);
     border-radius: 0px;
     color: #ffffff;
     text-transform: capitalize;
     font-weight: 600;
     font-size: 15px;
-    /* //border: 1px solid #00529b; */
+    /* //border: 1px solid var(--primary-color); */
     float: right;
     padding: 0;
   }
   .icon {
-    color: #00529b;
+    color: var(--primary-color);
     font-size: 19px;
   }
   .box {
-    color: #00529b;
+    color: var(--primary-color);
   }
-  
-  
-  
+
+
