--- a/src/app/shared/components/dynamic-setup-form-screen/dynamic-setup-form-screen.component.css
+++ b/src/app/shared/components/dynamic-setup-form-screen/dynamic-setup-form-screen.component.css
@@ -12,15 +12,15 @@
     margin-left: 35px; */
 }
 #cancel{
-    color: #00529B;
-    border-color: #00529B;
+    color: var(--primary-color);
+    border-color: var(--primary-color);
 }
 /* .activity{
     background-color: rgb(0, 82, 155, 0.2) ;
     color: #000;
 } */
 /* #search{
-    background-color: #00529B;
+    background-color: var(--primary-color);
     color: white;
     padding: 7px;
     border-radius: 3px;
@@ -47,7 +47,7 @@ cursor:pointer;
     font-weight: 700;
     font-size: 16px;
     line-height: 19px;
-    color: #00529B;
+    color: var(--primary-color);
 
 }
 label{
@@ -65,28 +65,28 @@ label{
     width: 4px;
     height:7px
   }
-  
+
   /* Track */
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 3px grey; 
+    box-shadow: inset 0 0 3px grey;
     border-radius: 10px;
   }
-   
+
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #D9D9D9; 
+    background: #D9D9D9;
     border-radius: 10px;
   }
-  
+
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: rgba(0, 30, 187, 0.1); 
+    background: rgba(0, 30, 187, 0.1);
   }
   /* #table-responsive{
     display: block;
     width: 100%;
     overflow-x: auto;
-    
+
   }
   .paramlist{
     overflow-y: scroll;
