--- a/src/assets/css/turnkey-styles.css
+++ b/src/assets/css/turnkey-styles.css
@@ -1,16 +1,22 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap');
 
+* {
+  --primary-color:  #00529B;
+
+}
+
 /* Root (global)*/
 html,body {
   margin:0;
   padding:0;
-  font-family: 'Lato', sans-serif;
-  color: #00529B!important;
+  /* font-family: 'Lato', sans-serif; */
+  font-family: Roboto !important;
+  color: var(--primary-color)!important;
 }
 
 .text-primary {
-  color: #00529B!important;
+  color: var(--primary-color)!important;
 }
 
 .text-success {
@@ -18,8 +24,8 @@ html,body {
 }
 
 .btn-primary {
-  background: #00529B;
-  border-color: #00529B;
+  background: var(--primary-color);
+  border-color: var(--primary-color);
   border-radius: 0;
   color: #fff;
   margin-right: 5px;
@@ -53,7 +59,7 @@ html,body {
 
 /* Side Navigation Starts */
 .base-side-nav .btn {
-  color: #00529B!important;
+  color: var(--primary-color)!important;
   font-weight: bold;
 }
 
@@ -77,7 +83,7 @@ html,body {
 
 
 .base-navbar {
-  background: #00529B !important;
+  background: var(--primary-color) !important;
   padding-right: 20px;
   padding-left: 20px;
 }
@@ -126,7 +132,7 @@ html,body {
 
 
 .base-content .content-nav .navbar #chart ul li a{
-  color: #00529B!important;
+  color: var(--primary-color)!important;
   font-size: 0.9em;
   font-weight: bold;
   text-decoration: underline;
@@ -167,11 +173,11 @@ html,body {
 
 .base-content .section-title {
   font-weight: bold;
-  color: #00529B;
+  color: var(--primary-color);
 }
 
 .base-content .base-content-section .calendar {
-  color: #00529B!important;
+  color: var(--primary-color)!important;
 }
 
 .base-content .base-content-section .form-control {
@@ -179,7 +185,7 @@ html,body {
 }
 
 .base-content .base-content-section .calendar .card-header {
-  background: #00529B;
+  background: var(--primary-color);
   color: #fff;
 }
 
@@ -323,6 +329,15 @@ h5.htxt {
 }
 /**Modal ends**/
 
+.text-plain {
+  border-radius: 2px;
+  border: 1px solid var(--primary-color);
+  background-color: #ffffff;
+  color: var(--primary-color);
+  padding: 0.6rem 1.3rem;
+  font-size: 12px;
+}
+
 
 .help{
 font-family: 'Lato';
@@ -331,7 +346,12 @@ font-weight: 700;
 font-size: 14px;
 line-height: 17px;
 text-decoration: underline;
-
-
 color: #00529B;
+}
+.text-plain:hover {
+  border: 1px solid var(--primary-color);
+  background-color: var(--primary-color);
+  color: white;
+  padding: 0.6rem 1.3rem;
+  font-size: 12px;
 }
