--- a/src/app/features/reports/criteria-pill/criteria-pill.component.css
+++ b/src/app/features/reports/criteria-pill/criteria-pill.component.css
@@ -5,7 +5,7 @@
 }
 
 .pill-title {
-  background: #0c3f73;
+  background: #00529b;
   padding: 10px;
   color: #fff
 }
@@ -17,5 +17,5 @@
 .pill-criteria {
   background: #fff;
   padding: 10px 5px;
-  color: #0c3f73
+  color: #00529b;
 }
