Class Setup Wizard Form Content

--- a/src/app/features/gis/components/setups/components/class-subclass/class-setup-wizard/class-setup-wizard.component.html
+++ b/src/app/features/gis/components/setups/components/class-subclass/class-setup-wizard/class-setup-wizard.component.html
@@ -1,3 +1,3 @@
 <div class="mx-4">
-    <app-dynamic-setup-wizard-welcome-screen [setupWizard]="classesSetupWizard" [setupListItem]="classesListItem" ></app-dynamic-setup-wizard-welcome-screen>
+    <app-dynamic-setup-wizard-welcome-screen [setupWizard]="wizardConfig" [setupListItem]="classesListItem" [formContent]="formContent"></app-dynamic-setup-wizard-welcome-screen>
 </div>
