--- a/src/app/features/base/components/dashboard/tickets-summary/tickets-summary.component.html
+++ b/src/app/features/base/components/dashboard/tickets-summary/tickets-summary.component.html
@@ -25,7 +25,7 @@
   </div>
   <div class="card-footer border-top-0" style="background-color: #ffffff">
     <div class="text-end" style="padding-bottom: 1rem;">
-      <a class="text-end-view" (click)="goToViewTickets()" >VIEW ALL</a>
+      <a class="text-end-view" (click)="goToViewTickets()" >{{'lang.view_all' | translate | uppercase }}</a>
     </div>
   </div>
 </div>
