--- a/src/app/features/base/components/header/header.component.html
+++ b/src/app/features/base/components/header/header.component.html
@@ -9,10 +9,10 @@
       <div style="color: white; padding: 0 0rem; display: flex; font-size: 1.5rem;">
         <div class="dropdown" style="padding: 0 1rem;">
           <span [class]="defaultLanguage" style="border-radius: 700px;  font-size: 1.7rem;"></span>
-          <div class="dropdown-content" style="min-width: 40px; font-size: 1.6rem; ">
+          <div class="dropdown-content" style="min-width: 110px; font-size: 1.6rem; ">
             <div *ngFor="let language of languages">
               <a (click)="selectLanguage(language)">
-                <span [class]="language.class"></span>
+                <span [class]="language.class"></span> <span style="color: black; font-size: 14px;"> {{language.lang}}</span>
               </a>
             </div>
           </div>
