--- a/src/app/features/gis/components/setups/components/product/product-definition/product-definition.component.html
+++ b/src/app/features/gis/components/setups/components/product/product-definition/product-definition.component.html
@@ -56,7 +56,7 @@
           </div> -->
           <div class="row">
             <div class="text-end">
-              <a class="text-primary" href="#">View all</a>
+              <a class="text-primary" href="#">{{'lang.view_all' | translate }}</a>
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
                 </div>
               </form>
               <label class="label2 mt-3">Product Details</label>
-             
+
               <div class="row">
                 <div *ngFor="let data of mandatoryFrontendScreens" class="col-6">
                   <form [formGroup]="productForm">
@@ -171,7 +171,7 @@
                   data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false"
                   aria-controls="collapseExample"> <i class="pi pi-chevron-up" style="font-size:13px"
                     *ngIf="!show"></i><i class="pi pi-chevron-down" style="font-size:13px" *ngIf="show"></i></span> </p>
-                    
+
               <div class="collapse" id="collapseExample">
                 <div class="row">
                   <div *ngFor="let data of optionalFrontendScreens" class="col-6">
@@ -218,7 +218,7 @@
                 [paginator]="true" [rows]="5" [scrollable]="true" scrollDirection="horizontal"
                 [showCurrentPageReport]="true" currentPageReportTemplate=" {first} - {last} of {totalRecords}"
                 [globalFilterFields]="['description']">
-                
+
                 <ng-template pTemplate="header">
                   <tr     style="font-size: 69%">
                     <th pSortableColumn="code">Sub Class Code<p-sortIcon field="isRiskLocationMandatory"></p-sortIcon>
@@ -315,7 +315,7 @@
                   </tr>
 
                 </ng-template>
-               
+
               </p-table>
 
 
@@ -376,14 +376,14 @@
                   </tr>
 
                 </ng-template>
-            
+
               </p-table>
 
 
 
             </div>
           </div>
-         
+
         </div>
       </div>
        <!-- Add product Subclass -->
