--- a/src/app/features/reports/create-report/create-report.component.css
+++ b/src/app/features/reports/create-report/create-report.component.css
@@ -10,6 +10,7 @@
 
 .right .card, .left .card {
   min-height: 65vh;
+  border-radius: 0;
 }
 
 .right .card .card-body {
@@ -127,7 +128,7 @@
   width: 100%;
   border-radius: 0px;
   height: 40px;
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
 /*primeng style*/
@@ -137,7 +138,7 @@
 }
 
 :host ::ng-deep .p-dropdown span{
-  font-size: 0.9em;
+  font-size: 0.9rem;
 }
 
 ::ng-deep .p-datatable .p-datatable-tbody > tr > td,
@@ -167,8 +168,7 @@
   border: solid 1px #eee;
   margin-top: 20px;
   min-width: 200px;
-  font-size: 11px;
-  font-weight: 900;
+  font-size: 0.9rem;
 }
 
 
