--- a/src/app/features/reports/my-reports/my-reports.component.html
+++ b/src/app/features/reports/my-reports/my-reports.component.html
@@ -34,7 +34,8 @@
               </li>
             </ul>
           </div>
-          <div class="col-sm-10 right">
+          <div class="col-sm-10 right" style="position: relative">
+            <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
             <div class="row">
               <ng-container *ngFor="let report of reports$ | async">
                 <div
