--- a/src/app/features/gis/components/setups/components/product/product-definition/product-definition.component.css
+++ b/src/app/features/gis/components/setups/components/product/product-definition/product-definition.component.css
@@ -9,6 +9,63 @@
     color: #00529B;
 }
 
+.card-footer {
+    background-color: #ffff;
+}
+
+.card-header {
+    height: 45px;
+    background-color: #ffff
+}
+input[type="file"]::-webkit-file-upload-button {
+    color: white;
+    background-color:#00529B;
+    border: 1px solid #00529B;
+    padding:1px;
+    border-radius: 2px;
+    /* Add any additional styling here */
+  }
+  
+  input[type="file"]::-moz-file-upload-button {
+    color: white;
+    background-color:#00529B;
+    border: 1px solid #00529B;
+      padding:1px;
+      border-radius: 2px;
+    /* Add any additional styling here */
+  }
+  
+  input[type="file"]::-ms-browse {
+    color: white;
+    background-color:#00529B;
+    border: 1px solid #00529B;
+      padding:3px;
+      border-radius: 2px;
+    /* Add any additional styling here */
+  }
+  
+  /* For newer versions of Firefox */
+  input[type="file"].form-control-sm::-moz-file-upload-button {
+    color: white;
+    background-color:#00529B;
+    border: 1px solid #00529B;
+    padding:0;
+    border-radius: 2px;
+    margin: 0;
+    /* Add any additional styling here */
+  }
+.subclasslables {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 14px;
+    /* identical to box height */
+
+
+    color: #1E293B;
+}
+
 #help {
     font-family: 'Lato';
     font-style: normal;
@@ -20,7 +77,12 @@
 
     color: #00529B;
 }
-
+.prod{
+    color: #00529B;
+    float: right;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #00529B; 
+}
 #tabbed {
     font-family: 'Lato';
     font-style: normal;
@@ -65,15 +127,12 @@
     align-items: center;
     float: right;
 }
-::ng-deep{
-    .p-datatable.p-datatable-sm .p-datatable-thead>tr>th {
-      padding: 0.5rem;
-      font-size: small;
-  }
-  .p-tree {
-    border: 0px;
-  }
-  }
+
+::ng-deep .p-tree {
+        border: none;
+    }
+
+
 .nav-pills .nav-item .nav-link.active {
     background-color: #00529B;
     color: #FFFFFF;
@@ -115,6 +174,17 @@
     line-height: 14px;
 
     color: #000000;
+}
+
+#setup {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 18px;
+    text-decoration-line: underline;
+    color: #00529B;
+
 }
 
 #delete {
@@ -165,6 +235,56 @@
     color: #00529B;
     cursor: pointer;
 }
-.add{
+
+.add {
     cursor: pointer;
+    color: #00529B;
+}
+.select {
+    overflow-y: scroll;
+    max-height: 600px;
+  }
+.selectgroup {
+    overflow-y: scroll;
+    max-height: 500px;
+    border: 0px;
+}
+::ng-deep{
+  .p-tree {
+    border: 0px;
+  }
+  }
+.nav-pills .nav-item .nav-link.active {
+  background-color: #00529B;
+  color:#FFFFFF;
+  text-decoration: none;
+}
+.nav-pills .nav-item .nav-link {
+  color: #00529B;
+}
+.nav-link {
+  text-decoration: none;
+  font-size: 13px;
+}
+/* width */
+:host ::ng-deep ::-webkit-scrollbar {
+    width: 4px;
+    border: 0px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px !important; 
+    border-radius: 1px !important;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: white !important; 
+    border-radius: 1px !important;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background:white !important; 
   }
